# Task-Scheduler-Project

./: .gitignore  CMakeLists.txt  Deletable.h  INSTALL.md  README.md  Renamable.cpp  Task.cpp  Task.h  TaskList.cpp  TaskList.h  USAGE.md  main.cpp
header/: ColorManager.h  Filter.h  Goal.h  InputHelper.h  Menu.h  PrintHelper.h  Renamable.h  Task.h  TaskList.h  View.h
src/: ColorManager.cpp  Delete.cpp  Filter.cpp  Goal.cpp  InputHelper.cpp  Menu.cpp  Print.cpp  PrintHelper.cpp  Task.cpp  TaskList.cpp  View.cpp  main.cpp  test.cpp
testing/: MainViewTest_EmptyMainTest.txt  README.md  View_test.hpp  input_filter.txt  input_new-list-new-task.txt  input_new-list.txt  input_new-task.txt  input_print-new-list.txt  input_rename-list.txt  valgrind.sh
uml/: README.md
